--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.9.0",
     "express-handlebars": "^1.1.0",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "socket.io": "^1.1.0"
   }
 }
