--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "TeamDiceIO",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
+  },
+    "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
